# ECommerceDemo

./: .pre-commit-config.yaml  pyproject.toml
project/: db.sqlite3
project/Account/: admin.py  models.py
project/Account/migrations/: 0001_initial.py  0002_alter_profile_city.py
project/Cart/: models.py
project/Order/: admin.py  models.py
project/Order/migrations/: 0001_initial.py
project/Product/: admin.py  models.py
project/Product/migrations/: 0001_initial.py  0002_rename_category_name_category_name_and_more.py  0003_alter_product_id.py  0004_alter_product_id.py  0005_remove_product_image_image.py  0006_alter_image_product.py  0007_alter_image_product.py  0008_alter_image_product_alter_product_category.py  0009_category_level_category_lft_category_parent_and_more.py
project/project/: settings.py
