[tool.poetry]
name = "ecommercedemo"
version = "0.1.0"
description = ""
authors = ["'starboyhassan' <'starboyhassan11@gmail.com'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
