[tool.poetry]
name = "ecommercedemo"
version = "0.1.0"
description = ""
authors = ["'starboyhassan' <'starboyhassan11@gmail.com'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
pre-commit = "^3.3.3"
pillow = "^10.0.0"
django-mptt = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
